gcc/testsuite/rust/rustc/ui/block-result/block-must-not-have-result-while.rs
fn main() {
    while true { // { dg-warning "" "" { target *-*-* } }
        true // { dg-error ".E0308." "" { target *-*-* } }
// { dg-error "" "" { target *-*-* } .-2 }
    }
}

